2025-09-05  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha03: Bodkin';git push
	git tag -a 5.3.5-alpha03 -m 'all: ';git push --tags

	* ncclimo: Additional debug information when ncks cannot link

2025-09-04  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha03: Bodkin';git push
	git tag -a 5.3.5-alpha03 -m 'all: ';git push --tags

	* ncclimo/ncremap: Add ~/anaconda/lib to LD_LIBRARY_PATH for Chrysalis, Perlmutter

2025-09-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha02: Iron Champs 2nd Place';git push
	git tag -a 5.3.5-alpha02 -m 'all: zfp flt stubs; ncks: plev/prs_3d in xtr fl; ncremap/ncclimo npo refactor';git push --tags

	* Add EAMv3 tests for Chrysalis

	* ncremap/ncclimo: Re-factor and simplify --npo code

2025-08-08  Charlie Zender  <zender@uci.edu>

	* Add H5Z_FILTER_ZFP=32013 to internal database

2025-07-24  Charlie Zender  <zender@uci.edu>

	* Add grd_crc_ngl.nco to compute distances/accuracy on great circles

	* Change obsolete GPL copyright statement in obsolete ncap_lex.[cl] files

2025-07-22  Charlie Zender  <zender@uci.edu>

	* Fix ncvardmnlatlon filter definition typo

2025-07-18  Charlie Zender  <zender@uci.edu>

	* Allow pure pressure input variables plev (or p3d) to be stored in external file

2025-07-17  Charlie Zender  <zender@uci.edu>

	* nco_rgr.c nco_vrt_ntp(): Add stubs for prs_3d interpolation

2025-07-13  Charlie Zender  <zender@uci.edu>

	* nco.texi update Forward

2025-07-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha01: Department Q';git push
	git tag -a 5.3.5-alpha01 -m 'Functionally identical to 5.3.4 except some documentation';git push --tags

	* nco.texi update Forward

2025-07-01  Charlie Zender  <zender@uci.edu>
