@@ -372,7 +372,8 @@ main(int argc,char **argv)
     {"omp_num_threads",required_argument,0,'t'},
     {"ulm_nm",required_argument,0,'u'},
     {"rcd_nm",required_argument,0,'u'},
-    {"variable",required_argument,0,'v'},
+    {"variables",required_argument,0,'v'},
+    {"var_lst",required_argument,0,'v'},
     {"auxiliary",required_argument,0,'X'},
     {"exclude",no_argument,0,'x'},
     {"xcl",no_argument,0,'x'},
