@@ -480,7 +480,8 @@ main(int argc,char **argv)
     {"thr_nbr",required_argument,0,'t'},
     {"threads",required_argument,0,'t'},
     {"omp_num_threads",required_argument,0,'t'},
-    {"variable",required_argument,0,'v'},
+    {"variables",required_argument,0,'v'},
+    {"var_lst",required_argument,0,'v'},
     {"wgt",required_argument,0,'w'},
     {"weight",required_argument,0,'w'},
     {"auxiliary",required_argument,0,'X'},
