@@ -410,7 +410,8 @@ main(int argc,char **argv)
     {"thr_nbr",required_argument,0,'t'},
     {"threads",required_argument,0,'t'},
     {"omp_num_threads",required_argument,0,'t'},
-    {"variable",required_argument,0,'v'},
+    {"variables",required_argument,0,'v'},
+    {"var_lst",required_argument,0,'v'},
     {"normalize-by-tally",no_argument,0,'W',},
     {"exclude",no_argument,0,'x'},
     {"xcl",no_argument,0,'x'},
